[package]
name = "mqtt-ranger"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
rumqttc = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
time = { version = "0.3", features = ["local-offset", "formatting"] }
